Some design changes

--- a/input/_includes/_html.njk
+++ b/input/_includes/_html.njk
@@ -15,7 +15,7 @@
 		<footer class="jch-row jch-row__footer">
 			{% h2br %}Footer{% endh2br %}
 			{% include "partials/find-me.html" %}
-			<p>This work is licensed under a
+			<p class= "copyright">This work is licensed under a
 				<a rel="license" href="https://en.wikipedia.org/wiki/MIT_License">MIT No Attribution License</a>. This means you are free to copy and redistribute the material in any medium or format, and remix, transform, and build upon the material.
 			</p>
 
