--- a/sass/main-v2.sass
+++ b/sass/main-v2.sass
@@ -125,7 +125,8 @@
 	@extend %cf
 	margin: 0 0 $p_medium
 	padding: $p_medium
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+	border-bottom: 1px solid $c_g_light
+	
 
 	p
 		margin-bottom: $p_small
@@ -178,3 +179,7 @@ blockquote
 
 		+larger_than_phone
 			border-color: $c_vivid_yellow
+
+
+.copyright 
+	font-size: $f_size_smallest
