--- a/src/_includes/css/colors.css
+++ b/src/_includes/css/colors.css
@@ -8,6 +8,7 @@ Color Properties
     --on-canvas: hsl(0deg 12% 30%);
     --on-canvas--dim: hsl(0deg 12% 30%);
     --on-canvas--mute: hsl(0deg 12% 30%);
+    --on-canvas--link: hsl(231deg 100% 50%);
 
     --border: 1px solid var(--on-canvas--mute);
     --shadow:
