Testing new link style

--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -109,8 +109,14 @@ sup {
 
 a {
     color: var(--on-canvas--dim);
-    text-decoration: underline;
-    text-decoration-color: var(--on-canvas--mute);
+    background: linear-gradient(to right,#ffd94d,#ffe68a);
+    background-size: 300% 40%;
+    background-repeat: no-repeat;
+    background-position: 0 100%;
+    transition-property: background-position;
+    transition-duration: 300ms;
+    padding: 0;
+    text-decoration: none;
 }
 
 a:hover {
