--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -63,9 +63,8 @@ header h1 + p {
 }
 
 h1, h2, h3 {
-    font-weight: 400;
-    font-size: 24px;
-    font-style: italic;
+    font-weight: 900;
+    text-transform: uppercase;
 }
 
 h3 {
@@ -127,6 +126,9 @@ a:hover {
 :is(h1, h2, h3) > a {
     color: unset;
     text-decoration: none;
+    font-size: var(--h1-size);
+    line-height: 1em;
+
 }
 
 blockquote {
