--- a/src/_includes/css/colors.css
+++ b/src/_includes/css/colors.css
@@ -4,10 +4,10 @@ Color Properties
 
 :root {
     --hue: 200;
-    --canvas: hsl(33deg 47% 96%);
-    --on-canvas: hsl(0deg 0% 0%);
-    --on-canvas--dim: hsl(0deg 0% 0%);
-    --on-canvas--mute: hsl(0deg 0% 0%);
+    --canvas: hsl(234deg 22% 19%);
+    --on-canvas: rgb(255, 255, 255);
+    --on-canvas--dim: rgb(235, 235, 235);
+    --on-canvas--mute: rgb(255, 255, 255);
     --on-canvas--link: hsl(231deg 100% 50%);
 
     --border: 1px solid var(--on-canvas--mute);
@@ -26,10 +26,10 @@ Color Properties
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --canvas: hsl(33deg 47% 96%);
-        --on-canvas: hsl(0deg 0% 0%);
-        --on-canvas--dim: hsl(0deg 0% 0%);
-        --on-canvas--mute: hsl(0deg 0% 0%);
+        --canvas: hsl(234deg 22% 19%);
+        --on-canvas: rgb(255, 255, 255);
+        --on-canvas--dim: rgb(235, 235, 235);
+        --on-canvas--mute: rgb(255, 255, 255);
     }
 }
 
