Fix few bugs and updated first blog post.

--- a/src/_includes/components/commits.njk
+++ b/src/_includes/components/commits.njk
@@ -18,7 +18,7 @@
     </li>
     {% endfor %}
   </ol>
-  <a href="hhttps://github.com/waleedhkhan/waleed.de/commits"
+  <a href="https://github.com/waleedhkhan/waleed.de/commits"
      target="_blank"
      rel="noopener noreferrer"
   >
