--- a/src/_includes/layouts/about.njk
+++ b/src/_includes/layouts/about.njk
@@ -21,14 +21,12 @@ As a consultant, I have been working directly with organisations to build clear,
   {% image "d1496bc7-e903-4152-80f9-9ae54f63ac1f", "2022, Berlin" %}
   <figcaption class="measure | push-down leading-crushed">
     <small>
-      <strong class="tertiary-text">Credits to my wife. Taken 2022 in near brandenburg tor in berlin.</strong>
-      
+      <strong class="tertiary-text">Credits to my wife. Taken near Brandenburg Tor, Berlin in 2023</strong>
     </small>
   </figcaption>
 </figure>
 
-  <p class="measure">
-   
+  <p class="measure">   
     In recent years I’ve become more and more interested in the methods of leading teams and how to work smarter. That is, how the well-being of each team member is kept central while the work can progress in a smooth way.
     
    Today I work with businesses to help them make a meaningful impact within their industry. I bring a critical eye to the development process, and advocate renewal over wholesale reinvention. 
