--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,7 @@ title: Personal Website
   </p>
 
   <p class="measure">
-    <b>#whoami:</b> I am a software engineer based in Berlin, specialized in designing and operations of large-scale e-commerce ecosystems for more than a decade... <a href="/about">Readmore</a>
+    <b>#whoami:</b> I am a software engineer based in Berlin, specialized in designing and operations of large-scale e-commerce ecosystems for more than a decade... <a href="/about">Read more.</a>
   </p>
 
   <p class="measure">
