--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ title: Personal Website
 
 <header class="flow | gap-x-large">
   <h1>Waleed H.Khan</h1>
-  <h2>Hi, Servas, Grüezi !</h1>
+  Hi, Servus, Grias-di !
   <p class="measure">
     Wellcome to my personal digital garden. A wild garden, loosely tended. It’s something in between a personal blog and a wiki. It's a collection of evolving notes, essays, and ideas that aren't strictly organised by their publication date. They're inherently exploratory.
   </p>
