--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/default
 ---
-
+{% include "components/theme.njk" %}
 {% from "components/stats.njk" import stats %}
 
 <header class="flow | gap-x-large">
