--- a/src/_includes/layouts/about.njk
+++ b/src/_includes/layouts/about.njk
@@ -2,6 +2,7 @@
 layout: layouts/default
 title: About
 ---
+{% include "components/theme.njk" %}
 
 <header class="flow | gap-x-large">
   <h1>About</h1>
