--- a/src/index.njk
+++ b/src/index.njk
@@ -3,12 +3,19 @@ layout: layouts/default
 title: Personal Website
 ---
 
+{% include "components/theme.njk" %}
+
+
 <header class="flow | gap-x-large">
+  
   <h1>Waleed H.Khan</h1>
   Hi, Servus, Grias-di !
+    
   <p class="measure">
     Wellcome to my personal digital garden. A wild garden, loosely tended. It’s something in between a personal blog and a wiki. It's a collection of evolving notes, essays, and ideas that aren't strictly organised by their publication date. They're inherently exploratory.
   </p>
+
+
 
   <p class="measure">
     <b>#whoami:</b> I am a software engineer based in Berlin, specialized in designing and operations of large-scale e-commerce systems for more than a decade... <a href="/about">read more.</a>
