Fixed footer gap & some typos

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -12,7 +12,7 @@
 
 </footer>
 
-<footer class="columns">
+<footer class="columns | gap">
   <div>
     <p class="tertiary-text">
       <small>&copy; {{ dates.currentYear() }}, waleed.de</small>
