--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,7 @@ title: Personal Website
   Hi, Servus, Grias-di !
     
   <p class="measure">
-    Wellcome to my personal digital garden. A wild garden, loosely tended. It’s something in between a personal blog and a wiki. It's a collection of evolving notes, essays, and ideas that aren't strictly organised by their publication date. They're inherently exploratory.
+    Welcome to my personal digital garden. A wild garden, loosely tended. It’s something in between a personal blog and a wiki. It's a collection of evolving notes, essays, and ideas that aren't strictly organised by their publication date. They're inherently exploratory.
   </p>
 
 
