Fixed recent commits link

--- a/src/_includes/components/commits.njk
+++ b/src/_includes/components/commits.njk
@@ -4,7 +4,7 @@
     {% for commit in commits %}
     <li>
       <p>#<code>{{ commit.hash }}</code></p>
-      <a href="https://github.com/waleedhkhan/waleed.de/{{ commit.hash }}"
+      <a href="https://github.com/waleedhkhan/waleed.de/commit/{{ commit.hash }}"
          target="_blank"
          rel="noreferrer"
       >
