--- a/src/_includes/css/base/variables.css
+++ b/src/_includes/css/base/variables.css
@@ -9,12 +9,12 @@
   --space-x-large: 3rem;
   --space-xx-large: 6rem;
   --text-size-default: 1rem;
-  --text-size-large: 1.2rem;
-  --text-size-small: 0.75rem;
+  --text-size-large: 2rem;
+  --text-size-small: 0.85rem;
   --text-weight-normal: 400;
   --text-weight-bold: 600;
   --text-display: "Signifier", "Georgia", "Times New Roman", "Times", serif;
-  --text-body: "EBGaramond", "Georgia", "Times New Roman", "Times", serif;
+  --text-body: "Inter", "Georgia", sans-serif;
   --text-mono: "Pitch", "Monaco", "Courier New", "Courier", monospace;
   --text-leading-default: 1.5;
   --text-leading-heading: 1.3;
