Typo fix + Type Change

--- a/src/_includes/css/base/fonts.css
+++ b/src/_includes/css/base/fonts.css
@@ -25,9 +25,9 @@
 }
 
 @font-face {
-  font-family: Signifier;
+  font-family: Oswald;
   font-weight: 600;
   font-style: normal;
   font-display: swap;
-  src: url("https://ucarecdn.com/e2be1c78-f71b-4a2b-b72d-0fbeb7786aca/InriaSansBold.woff") format("woff2");
+  src: url("https://ucarecdn.com/41b72db1-0f60-45e7-b21d-62c980af2ff9/") format("woff2");
 }
