--- a/src/_includes/css/base/fonts.css
+++ b/src/_includes/css/base/fonts.css
@@ -25,9 +25,9 @@
 }
 
 @font-face {
-  font-family: Oswald;
-  font-weight: 600;
+  font-family: CooperBlack;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url("https://ucarecdn.com/41b72db1-0f60-45e7-b21d-62c980af2ff9/") format("woff2");
+  src: url("https://ucarecdn.com/a418ed00-151d-4652-8922-9a86800dc13e/") format("woff2");
 }
