--- a/src/_includes/css/base/typography.css
+++ b/src/_includes/css/base/typography.css
@@ -18,15 +18,23 @@ a:hover {
 }
 
 h1,
-h2,
-h3 {
+h2 {
   font-size: var(--text-size-large);
   font-family: var(--text-display);
   line-height: var(--text-leading-heading);
   text-decoration: none;
   margin: 0 0 var(--space-large);
   font-weight: 400;
+}
+h3 {
+  font-size: var(--text-size-large);
+  font-family: var(--text-display);
+  line-height: var(--text-leading-heading);
+  text-decoration: none;
+  margin: 0 0 var(--space-large);
+  font-weight: 600;
   text-transform: uppercase;
+
 }
 
 .subtitle {
