--- a/src/_includes/css/base/variables.css
+++ b/src/_includes/css/base/variables.css
@@ -9,11 +9,11 @@
   --space-x-large: 3rem;
   --space-xx-large: 6rem;
   --text-size-default: 1rem;
-  --text-size-large: 2rem;
+  --text-size-large: 1.5rem;
   --text-size-small: 0.85rem;
   --text-weight-normal: 400;
   --text-weight-bold: 600;
-  --text-display: "Oswald", "Georgia", "Times New Roman", "Times", serif;
+  --text-display: "CooperBlack", "Georgia", "Times New Roman", "Times", serif;
   --text-body: "Inter", sans-serif;
   --text-mono: "Pitch", "Monaco", "Courier New", "Courier", monospace;
   --text-leading-default: 1.5;
