--- a/src/_includes/layouts/about.njk
+++ b/src/_includes/layouts/about.njk
@@ -22,7 +22,7 @@ As a consultant, I have been working directly with organisations to build clear,
   {% image "d1496bc7-e903-4152-80f9-9ae54f63ac1f", "2022, Berlin" %}
   <figcaption class="measure | push-down leading-crushed">
     <small>
-      <strong class="tertiary-text">Credits to my wife. Taken near Brandenburg Tor, Berlin in 2023</strong>
+      <strong class="tertiary-text">Credits to my wife. Taken near Brandenburger Tor in 2023</strong>
     </small>
   </figcaption>
 </figure>
