Tired, should probably sleep

--- a/src/index.njk
+++ b/src/index.njk
@@ -76,7 +76,7 @@ title: Personal Website
   </ol>
 </div>
 <div>
-  <h3 class="subtitle">Books I like the idea of having read</h3>
+  <h3 class="subtitle">Books I want to read</h3>
   <ol>
     {%- for bookshelve in bookshelves -%}
       {% if loop.index0 < 10 %}
