--- a/src/_includes/css/base/variables.css
+++ b/src/_includes/css/base/variables.css
@@ -13,7 +13,7 @@
   --text-size-small: 0.85rem;
   --text-weight-normal: 400;
   --text-weight-bold: 600;
-  --text-display: "CooperBlack", "Georgia", "Times New Roman", "Times", serif;
+  --text-display: "Inter", sans-serif;
   --text-body: "Inter", sans-serif;
   --text-mono: "Pitch", "Monaco", "Courier New", "Courier", monospace;
   --text-leading-default: 1.5;
