--- a/src/_includes/css/base/global.css
+++ b/src/_includes/css/base/global.css
@@ -105,7 +105,7 @@ figure {
 }
 
 .color-picker input[type="radio"]#light {
-  --radio-color: #e6dec8;
+  --radio-color: #000;
 }
 .color-picker input[type="radio"]#yellow {
   --radio-color: #433333;
