--- a/src/_includes/css/base/typography.css
+++ b/src/_includes/css/base/typography.css
@@ -24,8 +24,7 @@ h2 {
   line-height: var(--text-leading-heading);
   text-decoration: none;
   margin: 0 0 var(--space-large);
-  font-weight: 800;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 h3 {
   font-size: var(--text-size-large);
